@@ -28,6 +28,9 @@ alternate default pixmap via configuration options.
 
 .SH CONFIGURATION OPTIONS
 
+.IP "*FvwmBannerNoDecor
+Tells the module to create a window that Fvwm will not manage and not decorate.
+
 .IP "*FvwmBannerPixmap \fIfile\fP"
 Tells the module to display \fIfile\fP instead of the built in pixmap.
 
